--- a/instacart_modeled.ipynb
+++ b/instacart_modeled.ipynb
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -531,14 +531,63 @@
        "Index: []"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "CREATE TABLE instacart_modeled.Week_Days (\n",
+    "DROP TABLE instacart_modeled.Week_Days_SQL_Final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery\n",
+    "CREATE TABLE instacart_modeled.Week_Days_SQL_Final (\n",
     "day_id int64,\n",
     "day_name string\n",
     ")"
@@ -546,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -583,20 +632,20 @@
        "Index: []"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "INSERT INTO instacart_modeled.Week_Days(day_id, day_name)\n",
-    "VALUES (6, 'Sunday')"
+    "INSERT INTO instacart_modeled.Week_Days_SQL_Final(day_id, day_name)\n",
+    "VALUES (0, 'Sunday')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -633,20 +682,20 @@
        "Index: []"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "INSERT INTO instacart_modeled.Week_Days(day_id, day_name)\n",
-    "VALUES (0, 'Monday')"
+    "INSERT INTO instacart_modeled.Week_Days_SQL_Final(day_id, day_name)\n",
+    "VALUES (1, 'Monday')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -683,20 +732,20 @@
        "Index: []"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "INSERT INTO instacart_modeled.Week_Days(day_id, day_name)\n",
-    "VALUES (1, 'Tuesday')"
+    "INSERT INTO instacart_modeled.Week_Days_SQL_Final(day_id, day_name)\n",
+    "VALUES (2, 'Tuesday')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -733,20 +782,20 @@
        "Index: []"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "INSERT INTO instacart_modeled.Week_Days(day_id, day_name)\n",
-    "VALUES (2, 'Wednesday')"
+    "INSERT INTO instacart_modeled.Week_Days_SQL_Final(day_id, day_name)\n",
+    "VALUES (3, 'Wednesday')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -783,20 +832,20 @@
        "Index: []"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "INSERT INTO instacart_modeled.Week_Days(day_id, day_name)\n",
-    "VALUES (3, 'Thursday')"
+    "INSERT INTO instacart_modeled.Week_Days_SQL_Final(day_id, day_name)\n",
+    "VALUES (4, 'Thursday')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -833,20 +882,20 @@
        "Index: []"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "INSERT INTO instacart_modeled.Week_Days(day_id, day_name)\n",
-    "VALUES (4, 'Friday')"
+    "INSERT INTO instacart_modeled.Week_Days_SQL_Final(day_id, day_name)\n",
+    "VALUES (5, 'Friday')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -883,20 +932,20 @@
        "Index: []"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "INSERT INTO instacart_modeled.Week_Days(day_id, day_name)\n",
-    "VALUES (5, 'Saturday')"
+    "INSERT INTO instacart_modeled.Week_Days_SQL_Final(day_id, day_name)\n",
+    "VALUES (6, 'Saturday')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -928,37 +977,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>Monday</td>\n",
+       "      <td>Sunday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>Tuesday</td>\n",
+       "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>Wednesday</td>\n",
+       "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Thursday</td>\n",
+       "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Friday</td>\n",
+       "      <td>Thursday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>Saturday</td>\n",
+       "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>6</td>\n",
-       "      <td>Sunday</td>\n",
+       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -966,23 +1015,23 @@
       ],
       "text/plain": [
        "   day_id   day_name\n",
-       "0       0     Monday\n",
-       "1       1    Tuesday\n",
-       "2       2  Wednesday\n",
-       "3       3   Thursday\n",
-       "4       4     Friday\n",
-       "5       5   Saturday\n",
-       "6       6     Sunday"
+       "0       0     Sunday\n",
+       "1       1     Monday\n",
+       "2       2    Tuesday\n",
+       "3       3  Wednesday\n",
+       "4       4   Thursday\n",
+       "5       5     Friday\n",
+       "6       6   Saturday"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "SELECT * FROM instacart_modeled.Week_Days\n",
+    "SELECT * FROM instacart_modeled.Week_Days_SQL_Final\n",
     "ORDER BY day_id ASC"
    ]
   },
@@ -1549,12 +1598,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "for Week_Days"
+    "for Week_Days_SQL_Final"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1595,19 +1644,19 @@
        "0    7"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "select count(*) from instacart_modeled.Week_Days"
+    "select count(*) from instacart_modeled.Week_Days_SQL_Final"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1648,14 +1697,14 @@
        "0    7"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "select count(*) from (select distinct day_id from instacart_modeled.Week_Days)"
+    "select count(*) from (select distinct day_id from instacart_modeled.Week_Days_SQL_Final)"
    ]
   },
   {
