All changes reflected

--- a/instacart_analysis.ipynb
+++ b/instacart_analysis.ipynb
@@ -1154,15 +1154,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### VIEWS"
+    "#### Query 7"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Query 3 VIEW\n",
-    "Analyze the orders of the most \"loyal\" customers and get the top 10 most popular items"
+    "Which are the most popular departments and aisles?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bigquery\n",
+    "(SELECT department, aisle, product_name, pf.frequency\n",
+    "FROM `responsive-cab-267123.instacart_modeled.Order_Products_Beam_DF` pf\n",
+    "INNER JOIN `responsive-cab-267123.instacart_modeled.Products` p ON pf.product_id = p.product_id\n",
+    "INNER JOIN `responsive-cab-267123.instacart_modeled.Aisles` a ON p.aisle_id = a.aisle_id\n",
+    "INNER JOIN `responsive-cab-267123.instacart_modeled.Departments` d ON p.department_id = d.department_id\n",
+    "ORDER BY pf.frequency DESC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating View"
    ]
   },
   {
@@ -1205,6 +1226,300 @@
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery\n",
+    "CREATE OR REPLACE VIEW instacart_modeled.v_Popular_Departments_Aisle AS\n",
+    "(SELECT department, aisle, product_name, pf.frequency\n",
+    "FROM `responsive-cab-267123.instacart_modeled.Order_Products_Beam_DF` pf\n",
+    "INNER JOIN `responsive-cab-267123.instacart_modeled.Products` p ON pf.product_id = p.product_id\n",
+    "INNER JOIN `responsive-cab-267123.instacart_modeled.Aisles` a ON p.aisle_id = a.aisle_id\n",
+    "INNER JOIN `responsive-cab-267123.instacart_modeled.Departments` d ON p.department_id = d.department_id\n",
+    "ORDER BY pf.frequency DESC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which items were added to the cart first?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>frequency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24852</td>\n",
+       "      <td>Banana</td>\n",
+       "      <td>115521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13176</td>\n",
+       "      <td>Bag of Organic Bananas</td>\n",
+       "      <td>82877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>27845</td>\n",
+       "      <td>Organic Whole Milk</td>\n",
+       "      <td>32071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21137</td>\n",
+       "      <td>Organic Strawberries</td>\n",
+       "      <td>28875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>47209</td>\n",
+       "      <td>Organic Hass Avocado</td>\n",
+       "      <td>24913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42183</th>\n",
+       "      <td>4426</td>\n",
+       "      <td>Raw Breaded White Chicken Patty Filled With Br...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42184</th>\n",
+       "      <td>4772</td>\n",
+       "      <td>Complete Fresh Scent ActionPacs Dishwasher Det...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42185</th>\n",
+       "      <td>5403</td>\n",
+       "      <td>White Paper Towels Giant Rolls</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42186</th>\n",
+       "      <td>13096</td>\n",
+       "      <td>Special K Nourish Bites Dark Chocolate Pistachio</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42187</th>\n",
+       "      <td>36402</td>\n",
+       "      <td>Cold Brew Coffee Caffe Latte</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>42188 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       product_id                                            product  \\\n",
+       "0           24852                                             Banana   \n",
+       "1           13176                             Bag of Organic Bananas   \n",
+       "2           27845                                 Organic Whole Milk   \n",
+       "3           21137                               Organic Strawberries   \n",
+       "4           47209                               Organic Hass Avocado   \n",
+       "...           ...                                                ...   \n",
+       "42183        4426  Raw Breaded White Chicken Patty Filled With Br...   \n",
+       "42184        4772  Complete Fresh Scent ActionPacs Dishwasher Det...   \n",
+       "42185        5403                     White Paper Towels Giant Rolls   \n",
+       "42186       13096   Special K Nourish Bites Dark Chocolate Pistachio   \n",
+       "42187       36402                       Cold Brew Coffee Caffe Latte   \n",
+       "\n",
+       "       frequency  \n",
+       "0         115521  \n",
+       "1          82877  \n",
+       "2          32071  \n",
+       "3          28875  \n",
+       "4          24913  \n",
+       "...          ...  \n",
+       "42183          1  \n",
+       "42184          1  \n",
+       "42185          1  \n",
+       "42186          1  \n",
+       "42187          1  \n",
+       "\n",
+       "[42188 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery\n",
+    "(SELECT op.product_id, p.product_name as product, count(1) as frequency\n",
+    "FROM `responsive-cab-267123.instacart_modeled.Order_Products` op\n",
+    "INNER JOIN `responsive-cab-267123.instacart_modeled.Products` p ON p.product_id = op.product_id\n",
+    "WHERE op.add_to_cart_order = 1\n",
+    "GROUP BY op.product_id, p.product_name\n",
+    "ORDER BY frequency DESC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery\n",
+    "CREATE OR REPLACE VIEW instacart_modeled.v_First_Added_Product AS\n",
+    "(SELECT op.product_id, p.product_name as product, count(1) as frequency\n",
+    "FROM `responsive-cab-267123.instacart_modeled.Order_Products` op\n",
+    "INNER JOIN `responsive-cab-267123.instacart_modeled.Products` p ON p.product_id = op.product_id\n",
+    "WHERE op.add_to_cart_order = 1\n",
+    "GROUP BY op.product_id, p.product_name\n",
+    "ORDER BY frequency DESC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VIEWS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 3 VIEW\n",
+    "Analyze the orders of the most \"loyal\" customers and get the top 10 most popular items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2365,7 +2680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
